# myLLM

./: pyproject.toml
src/: main.py  tokenizer.py
