[project]
name = "myllm"
version = "0.1.0"
description = "Building a LLM stratch"
authors = [
    {name = "hari-testpress",email = "hari@testpress.in"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)",
    "torch (>=2.7.0,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
